Call `newInstance()` on `Constructor` instance, not on class itself